angular material/bootstrap added, searchable-grouped-multi-select.component template refactor

--- a/src/app/demos/demo1/demo1.component.html
+++ b/src/app/demos/demo1/demo1.component.html
@@ -1,1 +1,4 @@
-<app-searchable-grouped-multi-select [dropdownEntries]="dropdownEntries" ></app-searchable-grouped-multi-select>
+<div class="col-6 form-group">
+    <app-searchable-grouped-multi-select (ungroupedChange)="unGroupedSelection($event)" [title]="'Choose favorite'" [dropdownEntries]="dropdownEntries">
+    </app-searchable-grouped-multi-select>
+</div>
