--- a/src/app/searchable-grouped-mat-select/searchable-grouped-multi-select/searchable-grouped-multi-select.component.html
+++ b/src/app/searchable-grouped-mat-select/searchable-grouped-multi-select/searchable-grouped-multi-select.component.html
@@ -11,7 +11,7 @@
                     {{ instance.text }}
                 </mat-option>
             </ng-container>
-            <!-- grouoped dropdowns -->
+            <!-- grouped dropdowns -->
             <ng-template #grouped>
                 <ng-container *ngIf="groupedDropdownEntries?.length">
                     <mat-optgroup *ngFor="let group of groupedDropdownEntries" [label]="group.name">
