--- a/src/app/demos/demo1/demo1.component.html
+++ b/src/app/demos/demo1/demo1.component.html
@@ -1,4 +1,12 @@
-<div class="col-6 form-group">
-    <app-searchable-grouped-multi-select (ungroupedChange)="unGroupedSelection($event)" [title]="'Choose favorite'" [dropdownEntries]="dropdownEntries">
-    </app-searchable-grouped-multi-select>
+<div class="row">
+    <div class="col-12">
+        <h3>Multi dropdown</h3>
+    </div>
+    <div class="col-12 form-group">
+        <app-searchable-grouped-multi-select 
+            (ungroupedChange)="unGroupedSelection($event)" 
+            [title]="'Choose favorite'"
+            [dropdownEntries]="dropdownEntries">
+        </app-searchable-grouped-multi-select>
+    </div>
 </div>
